feat: Add endpoint and service to update an operation and recalculate its descendant operations.
